--- a/index.html
+++ b/index.html
@@ -50,7 +50,10 @@
             <span class="icon"><i class="fas fa-file-pdf"></i></span><span>Paper</span>
           </a>
           <a href="https://github.com/cskyl/Object-State-Bench" class="button is-dark is-rounded">
-            <span class="icon"><i class="fab fa-github"></i></span><span>Code & Data</span>
+            <span class="icon"><i class="fab fa-github"></i></span><span>Code</span>
+          </a>
+          <a href="https://huggingface.co/datasets/Tianle/Object-State-Bench" class="button is-dark is-rounded">
+            <span class="icon"><i class="fas fa-database"></i></span><span>Dataset</span>
           </a>
         </div>
       </div>
